Changelog
=========

Version development
  * GTK Version check
  * add accels only for SourceView editor
  * export document as HTML
  * using WebKit2 engine

Version 1.0.2 - 19.07.2016 17:39

  * Formiko Vim entry point

Version 1.0.1 - 14.07.2016 09:08

  * New 1.0.1 release
  * Adding ChangeLog file
  * fix vim editing on empty line at and of file
  * fix file path when application server is running

Version 1.0.0 - 12.07.2016 08:24
  * stable version 1.0.0
  * right source distribution
  * desktop integration
  * litle bit fixies
  * application icon from petr simcik
  * final clean code
  * Small fixies from TODO:
  * html preview mode
  * clean text and new version
  * file type detection
  * working MarkDown support with gui
  * user preferences
  * modern Gtk+3 appearance (Menu)
  * opening file for sourceview editor
  * sourceview reading from and saving to files
  * base sourceview version
  * separating code to modules
  * preview mode
  * using Gtk.Application instead of GObject.GObject
  * full working
  * python3 support
  * crashing tread does crash gtk
  * using Gtk+3
  * installable project
  * first based function