@@ -6,6 +6,7 @@ from uuid import uuid4
 from traceback import print_exc
 from os import stat
 from os.path import splitext
+from sys import version_info
 
 from formiko.vim import VimEditor
 from formiko.sourceview import SourceView
@@ -154,7 +155,11 @@ class AppWindow(Gtk.ApplicationWindow):
                     and not file_name.lower().endswith(".htm"):
                 file_name += ".html"
             with open(file_name, "w+") as output:
-                output.write(self.renderer.render_output()[1].strip())
+                data = self.renderer.render_output()[1].strip()
+                if version_info.major == 2:
+                    output.write(data.encode("utf-8"))
+                else:   # python 3.x
+                    output.write(data)
         dialog.destroy()
 
     def on_delete(self, *args):
